--- a/ProjektDokumentation/bibfil.bib
+++ b/ProjektDokumentation/bibfil.bib
@@ -3,9 +3,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% SKABELONER %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
 %PDF'er
 @manual{refID,
 	Author = {Jon Burroughs},
@@ -29,7 +26,7 @@
   author = {Ingeniør Højskolen Aarhus},
   title  = {120\_KHz\_elnet.pdf},
   year   = {2016},
-  date   = {11-09-2016},
+  date   = {11-09-2016}
 }
 
 
@@ -41,22 +38,13 @@ For at referencerne opdaterer sig skal der compiles, køres "Bibtex 8-bit" komma
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% START PÅ REFERENCER %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Projektbeskrivelse %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	
-	
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Arkitektur %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Design disblinje %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 @Book{DisbTeori,
   author = {J. Glover et al.},
   title  = {Power System Analysis & Design},
   year   = {2016},
- 
+  date   = {11-09-2016} 
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Design af Måleenhed %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%Links - URLdate er den dato hvor linket er SET af os. Date-Modified er den dato linket er modificeret på nettet (hvis det fremgår)
 @online{Cooley,
 	Date-Modified = {2016-01-13 00:00:00 +0000},
 	Title = {Cooley and Tukey FFT algoritme},
@@ -68,8 +56,3 @@ For at referencerne opdaterer sig skal der compiles, køres "Bibtex 8-bit" komma
 	Title = {Cypress forum},
 	Url = {http://www.cypress.com/forum/psoc-5-device-programming/how-implement-fft-psoc5},
 	Urldate = {2017-04-10}}
-	
-	
-
-	
-	
