--- a/ProjektDokumentation/sektioner/Integrationstest/NetTilMaal.tex
+++ b/ProjektDokumentation/sektioner/Integrationstest/NetTilMaal.tex
@@ -14,8 +14,8 @@ Testene laves ved at måle på nettet med Måleenheden, som er forbundet til bru
 		\textbf{Test}					&Udregning og simulering passer med systemets værdier. \\ \hline
 		\textbf{Testbeskrivelse}		&Der testes ved at forsyne nettet med trinskifteren og derefter måle spænding, strøm og Pf med Måleenheden ved en forbruger \\ \hline
 		\textbf{Input}					&4Vrms fra trinskifter, der tilsluttes 54$\Omega$ belastning efter distributionslinjen \\ \hline
-		\textbf{Forventet output}		&At resultaterne i tabel \ref{tab:intTest2} stemmer overens \\ \hline
-		\textbf{Resultat}				&Se tabel \ref{tab:intTest2} \\ \hline
+		\textbf{Forventet output}		&At resultaterne i tabel \ref{tab:intTest4result} stemmer overens \\ \hline
+		\textbf{Resultat}				&Se tabel \ref{tab:intTest4result} \\ \hline
 	\end{tabular}
 	\caption{Integrationstest 4}
 \label{tab:intTest4}
