--- a/ProjektDokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
@@ -137,7 +137,7 @@ Systemet indholder tre usecases, der alle er initieret af brugeren. Den automati
 		\end{tabularx}
 	\end{threeparttable}
 	\caption{Fully dressed use case for UC3 - Skift trin}
-	\label{table:UC3}
+	\label{table:UC3a}
 \end{table}
 
 \subsection{Usecase 3b - Skift trin}
@@ -175,7 +175,7 @@ Systemet indholder tre usecases, der alle er initieret af brugeren. Den automati
 		\end{tabularx}
 	\end{threeparttable}
 	\caption{Fully dressed use case for UC3 - Skift trin}
-	\label{table:UC3}
+	\label{table:UC3b}
 \end{table}
 
 
