--- a/ProjektDokumentation/sektioner/foranalyse.tex
+++ b/ProjektDokumentation/sektioner/foranalyse.tex
@@ -13,6 +13,7 @@ Det er besluttet at lave Styringsenhedens kontroldel på en Programmable Logic C
 Det var først tænkt at der kunne laves eller købes nogle sensorer som skulle tilsluttes PLC'en. PLC'en kan dog ikke måle hurtigt nok på AC forbindelser til at få et reelt billede af signalet. Så det kan undersøges for harmoniske svingninger. Ved at sample et signal på en PSOC, med en hurtigere samplefrekvens, kan der udregnes fourier. Fourier kan anvendes til at udregne størrelsen på et signal ved bestemte frekvenser, og derved kan systemet undersøges for harmoniske. Der findes en måde til at angive hvor stort et indhold af harmoniske, der er i et forsyningssystem, som kaldes Total Harmonic Distortion (THD). Dette er et tal i procent, som angiver hvor stort indholdet af harmoniske er. Da beregningen af dette er forholdsvis simpelt, vil denne metode blive brugt til at analyserer systemets indhold af harmoniske. 
 
 \section{Simulering af distributionslinje}
+\label{sec:ForanalyseDisb}
 For at opnå en virkelighedstro simulering af en distributionslinje blev der i starten af projektet taget kontakt til energiselskabet Eniig. Herfra modtog projektgruppen data på et udsnit af et distributionsnet. Forinden var der i samarbejde med vejleder fundet kabeldata på nkt cables hjemmeside. Afstandene mellem distributionstransformer og belastninger i Eniigs data er forholdsvis korte (100-500 meter). Med de fundne kabeldata vil der ikke være modstand- og spolevirkning, der vil påvirke spændingen i simuleringen. Velvidende at det ikke stemmer overens med virkeligheden, valgtes det derfor at simulere en distributionslinje på 60 kilometer. 
 
 
