Reference til bog

--- a/ProjektDokumentation/bibfil.bib
+++ b/ProjektDokumentation/bibfil.bib
@@ -42,8 +42,7 @@ For at referencerne opdaterer sig skal der compiles, køres "Bibtex 8-bit" komma
   author = {J. Glover et al.},
   title  = {Power System Analysis & Design},
   year   = {2016},
-  date   = {11-09-2016} 
-}
+  date   = {22-05-2017}}
 
 @online{Cooley,
 	Date-Modified = {2016-01-13 00:00:00 +0000},
