Rettelse af enhed i belastningsafsnit

--- a/ProjektDokumentation/sektioner/Design/Belastning.tex
+++ b/ProjektDokumentation/sektioner/Design/Belastning.tex
@@ -48,7 +48,7 @@ R_B^2\cdot (1-\frac{1}{0,81})+2\cdot R_L\cdot R_B+X_L^2=0
 Værdier indsættes og herved fås:
 
 \begin{align}
-R_B^2\cdot (-0,24) +12,4\cdot R_B+18,23=0
+R_B^2\cdot (-0,24) +12,4\Omega\cdot R_B+18,23\Omega=0
 \end{align}
 
 Andengrads ligning løses og derved findes den modstandsværdi, der vil give et spændingsfald på 10\%.
