--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -132,7 +132,8 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \chapter{Foranalyse}
 \include{sektioner/Foranalyse}
 \chapter{Arkitektur}
-\include{sektioner/Arkitektur}
+\include{sektioner/Arkitektur/BDD}
+\include{sektioner/Arkitektur/IBD}
 \chapter{Design af distributionslinje, belastning og trinskifter}
 \chapter{Design af Styringsenhed}
 \chapter{Design af Målenhed}
