Minor ændring i dokumentationen

--- a/ProjektDokumentation/sektioner/Arkitektur/IBD.tex
+++ b/ProjektDokumentation/sektioner/Arkitektur/IBD.tex
@@ -6,7 +6,7 @@ På figur \ref{fig:IBDSp} og figur \ref{fig:IBDSt} ses IBD for henholdsvis Spæn
 
 \begin{figure}[htbp] % (alternativt [H])
 	\centering
-	\includegraphics[width=0.8\textwidth]{Figure/IBDSpaendingsregulator1}
+	\includegraphics[width=0.8\textwidth]{Figure/IBDSpaendingsregulator}
 	\caption{IBD for Spændingsregulator}
 	\label{fig:IBDSp}
 \end{figure}
@@ -41,7 +41,7 @@ På figur \ref{fig:IBDSp} og figur \ref{fig:IBDSt} ses IBD for henholdsvis Spæn
 
 \begin{figure}[htbp] % (alternativt [H])
 	\centering
-	\includegraphics[width=0.8\textwidth]{Figure/IBDStyringsenhed1}
+	\includegraphics[width=0.8\textwidth]{Figure/IBDStyringsenhed}
 	\caption{IBD for Styringsenhed}
 	\label{fig:IBDSt}
 \end{figure}
